// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing ShoppingCart Component renders as expected 1`] = `
<section
  className="main__summary"
>
  <h2>
    Your cart
  </h2>
  <div>
    <div
      className="summary__option"
    >
      <div
        className="summary__option__label"
      >
        Processor
         
      </div>
      <div
        className="summary__option__value"
      >
        17th Generation Intel Core HB (7 Core with donut spare)
      </div>
      <div
        className="summary__option__cost"
      >
        $700.00
      </div>
    </div>
    <div
      className="summary__option"
    >
      <div
        className="summary__option__label"
      >
        Operating System
         
      </div>
      <div
        className="summary__option__value"
      >
        Ubuntu Linux 16.04
      </div>
      <div
        className="summary__option__cost"
      >
        $200.00
      </div>
    </div>
  </div>
  <div
    className="summary__total"
  >
    <div
      className="summary__total__label"
    >
      Total
    </div>
    <div
      className="summary__total__value"
    >
      $900.00
    </div>
  </div>
</section>
`;

exports[`Testing ShoppingCart Component renders as expected without props 1`] = `
<section
  className="main__summary"
>
  <h2>
    Your cart
  </h2>
  <div />
  <div
    className="summary__total"
  >
    <div
      className="summary__total__label"
    >
      Total
    </div>
    <div
      className="summary__total__value"
    >
      $0.00
    </div>
  </div>
</section>
`;
